autapi/tests/snapshots/derive_to_schema__tuple_struct-2.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "TestReferencedInline::schema(&mut Registry::default())"
---
{
  "type": "boolean",
  "description": "A referenced value."
}
