autapi/tests/snapshots/derive_to_schema__tuple_struct-3.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "TestInlined::schema(&mut Registry::default())"
---
{
  "type": "boolean",
  "description": "An always inlined value."
}
