autapi/tests/snapshots/derive_to_schema__tuple_struct-4.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "TestInlinedInline::schema(&mut Registry::default())"
---
{
  "type": "boolean",
  "description": "An always inlined value."
}
