autapi/tests/snapshots/derive_to_schema__tuple_struct.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "TestReferenced::schema(&mut Registry::default())"
---
{
  "$ref": "#/components/schemas/Referenced"
}
