autapi/tests/snapshots/derive_to_schema__unit_struct-3.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<UnitStruct>>(json!(null))"
---
Ok(
    SerdeAdapter(
        UnitStruct,
    ),
)
