autapi/tests/snapshots/derive_to_schema__unit_struct-4.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "serde_json::from_value::<SerdeAdapter<UnitStruct>>(json!({}))"
---
Err(
    Error("invalid type: map, expected unit", line: 0, column: 0),
)
