autapi/tests/snapshots/derive_to_schema__unit_struct.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "UnitStruct::schema(&mut Registry::default())"
---
{
  "type": "null",
  "description": "A unit struct."
}
