autapi/tests/snapshots/derive_to_schema__using-10.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "UsingEnum::schema(&mut Registry::default())"
---
{
  "anyOf": [
    {
      "type": "object",
      "properties": {
        "value": {
          "type": "integer",
          "format": "int64",
          "description": "optional int value in named fields"
        }
      }
    },
    {
      "type": "integer",
      "format": "int64",
      "description": "optional int"
    }
  ]
}
