autapi/tests/snapshots/derive_to_schema__using-11.snap
---
source: autapi/tests/derive_to_schema.rs
expression: "SerdeAdapter(UsingEnum::Tuple(Nullable(Some(42))))"
---
42
